[package]
name = "cargo-licensebundler"
version = "0.1.0"
edition = "2018"
license = "ISC"
authors = [
    "Ferdinand Linnenberg <ferdinand@linnenberg.dev>"
]
repository = "https://github.com/Scarjit/licensebundler"
description = "Cargo subcommand to generate bundled license html"
keywords = ["license"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-license = "0.4.1"
cargo_metadata = "0.9.1"
serde = {version = "1.0.123",features = ["derive"]}
serde_json = "1.0.64"
log = "0.4.14"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
comrak = "0.10.1"
clap = "3.0.0-beta.2"
reqwest = "0.11.3"
http = "0.2.4"
async-fs = "1.5.0"
futures-lite = "1.12.0"

[dependencies.tokio]
version = "1.6.1"
features = ["rt", "macros", "rt-multi-thread"]